tests/main_tests/ui/wrap_ref_fn_ty_err.stderr
error[E0277]: the trait bound `Wrapping<u8>: TransparentWrapper<u16>` is not satisfied
  --> tests/main_tests/ui/wrap_ref_fn_ty_err.rs:5:5
   |
5  |     wrap_ref(reff)
   |     ^^^^^^^^ the trait `TransparentWrapper<u16>` is not implemented for `Wrapping<u8>`
   |
   = help: the trait `TransparentWrapper<T>` is implemented for `Wrapping<T>`
note: required by a bound in `constmuck::wrapper::wrap_ref`
  --> src/wrapper.rs:69:12
   |
67 | pub const fn wrap_ref<Outer, Inner>(reff: &Inner) -> &Outer
   |              -------- required by a bound in this function
68 | where
69 |     Outer: TransparentWrapper<Inner>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `wrap_ref`
